tests/baselines/reference/generatorTypeCheck12.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck12.ts(2,5): error TS2322: Type '""' is not assignable to type 'number | void'.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck12.ts (1 errors) ====
    function* g(): IterableIterator<number> {
        return "";
        ~~~~~~~~~~
!!! error TS2322: Type '""' is not assignable to type 'number | void'.
    }